#729 chanegs code component z-index to prevent overlap with top nav

--- a/docs/styleguide/styles/_code.scss
+++ b/docs/styleguide/styles/_code.scss
@@ -18,7 +18,7 @@
             content: '';
             position: absolute;
             display: block;
-            z-index: 2000;
+            z-index: 1;
             min-height: 100%;
             min-width: 100%;
             opacity: 0.5;
